DATE        AUTHOR      CHANGE
----------- ----------- -------------------------------------------------------
Sep-17-2004 patrickh    Introduced the concept of editable enumerations for use
                        in VRJConfig.  The config definition file format has
                        been modified to allow for this, and the .jdef file
                        format version is now 3.1.
                        NEW VERSION: 0.18.0
Sep-17-2004 aronb       Added the ability to the C++ API to test if a
                        config elmeent is derived from a given token.
                        NEW VERSION: 0.17.2
Sep-11-2004 patrickh    Updated for JDOM 1.0.
                        NEW VERSION: 0.17.1
Apr-05-2004 patrickh    Refactored jccl::ConfigManager to reduce public
                        accessibility of the pending configuration list.
                        NEW VERSION: 0.17.0
Mar-19-2004 patrickh    Using a search path to find configuration files is
                        working again for the first time since September 2001.
                        NEW VERSION: 0.16.0
Dec-31-2003 patrickh    Removed unneeded functions jccl::stringToVar(),
                        jccl::hasSeparator(), jccl::getRemainder(), and
                        jccl::getFirstNameComponent().
                        NEW VERSION: 0.15.1
Nov-17-2003 patrickh    The factory function for remote run-time
                        reconfiguration plug-ins now take a parameter that is
                        of type jccl::ConfigManager*.
                        NEW VERSION: 0.15.0
Nov-09-2003 patrickh    Refactored the CORBA-based remote run-time
                        reconfiguration code so that it can be loaded at
                        run-time as a plug-in.
                        NEW VERSION: 0.14.0
Nov-04-2003 patrickh    Removed the storage of multiple versions of individaul
                        configuration definitions in